--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -28,6 +28,17 @@ jobs:
         name: gitversion
         path: version.txt
   build:
-    - name: Flutter Deployment
-      uses: jeanluc243/Flutter-Deployment@0.1
-
+    name: Build APK and Create release
+    needs: [ version ]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable' # or: 'beta', 'dev' or 'master'
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build apk
