--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -1,27 +1,38 @@
-on: 
-  push: 
-    tags : 
-      - v*
-jobs: 
-  build-and-test: 
+name: Demo App Android Release
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  version:
+    name: Create version number
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1 
-    # we need java to build android apks
+    - uses: actions/checkout@v1
+    - name: Fetch all history for all tags and branches
+      run: |
+        git fetch --prune --depth=10000
+    - name: Create version.txt with nuGetVersion
+      run: echo 1.0.0 > version.txt
+    - name: Upload version.txt
+      uses: actions/upload-artifact@v2
+      with:
+        name: gitversion
+        path: version.txt
+  build:
+    name: Build APK and Create release
+    needs: [ version ]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-    # this flutter action does the heavy lifting for us
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable'  
-    # get packages as you used to in your computer
+        channel: 'stable' # or: 'beta', 'dev' or 'master'
     - run: flutter pub get
-    # Now build apk
-    - run: flutter build apk --split-per-abi
-    # now relase the just created build
-    - name: Create a Release APK
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "build/app/outputs/apk/release/*.apk"
-        token: ${{ secrets.GH_TOKEN }}
+    - run: flutter test
+    - run: flutter build apk
+  
