--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -25,34 +25,16 @@ jobs:
     needs: [ version ]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.17.0'
-    - name: Get version.txt
-      uses: actions/download-artifact@v2
-      with:
-        name: gitversion
-    - name: Create new file without newline char from version.txt
-      run: tr -d '\n' < version.txt > version1.txt
-    - name: Read version
-      id: version
-      uses: juliangruber/read-file-action@v1
-      with:
-        path: version1.txt
-    - name: Update version in YAML
-      run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
-    #- name: Update KeyStore password in gradle properties
-   #   run: sed -i 's/#{KEYSTORE_PASS}#/${{ secrets.KEYSTORE_PASS }}/g' android/key.properties
-    #- name: Update KeyStore key password in gradle properties
-    #  run: sed -i 's/#{KEYSTORE_KEY_PASS}#/${{ secrets.KEYSTORE_KEY_PASS }}/g' android/key.properties
+        channel: 'stable' # or: 'beta', 'dev' or 'master'
     - run: flutter pub get
     - run: flutter test
-    - run: flutter build apk --release --split-per-abi
-    - run: flutter build appbundle
+    - run: flutter build apk
     - name: Create a Release in GitHub
       uses: ncipollo/release-action@v1
       with:
@@ -61,4 +43,3 @@ jobs:
         tag: ${{ steps.version.outputs.content }}
         commit: ${{ github.sha }}
         prerelease: true
-  
