--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -40,6 +40,6 @@ jobs:
       with:
         artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
         token: ${{ secrets.GH_TOKEN }}
-        tag: ${{ steps.version.outputs.content }}
+        tag: "1.0.0"
         commit: ${{ github.sha }}
         prerelease: true
