--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Create a Release in GitHub
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
+        artifacts: "build/app/outputs/apk/release/*.apk"
         token: ${{ secrets.GH_TOKEN }}
         tag: "1.0.0"
         commit: ${{ github.sha }}
