--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Create a Release in GitHub
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "build/app/outputs/flutter-apk/*.apk"
+        artifacts: "build/app/outputs/flutter-apk/app-release.apk"
         token: ${{ secrets.GH_TOKEN }}
         tag: "1.0.0"
         commit: ${{ github.sha }}
