--- a/.github/workflows/android-dev-release.yml
+++ b/.github/workflows/android-dev-release.yml
@@ -1,52 +1,49 @@
-name: Demo App Android Release
+name: Flutter CI
+
+# This workflow is triggered on pushes to the repository.
 
 on:
   push:
-    branches: [ main ]
-
+    branches:
+    - main
+    
+# on: push    # Default will running for every branch.
+    
 jobs:
-  version:
-    name: Create version number
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - name: Fetch all history for all tags and branches
-      run: |
-        git fetch --prune --depth=10000
-    - name: Create version.txt with nuGetVersion
-      run: echo 1.0.0 > version.txt
-    - name: Upload version.txt
-      uses: actions/upload-artifact@v2
-      with:
-        name: gitversion
-        path: version.txt
   build:
-    name: Build APK and create release 
-    needs: [ version ]
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    
+    # Setup Java environment in order to build the Android app.
+    - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
+    
+    # Setup the flutter environment.
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable' # or: 'beta', 'dev' or 'master'
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+        # flutter-version: '1.12.x' # you can also specify exact version of flutter
+    
+    # Get flutter dependencies.
     - run: flutter pub get
+    
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
+    
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
     - run: flutter test
+    
+    # Build apk.
     - run: flutter build apk
-    - name: Create a Release in GitHub
-      uses: ncipollo/release-action@v1
+    
+    # Upload generated apk to the artifacts.
+    - uses: actions/upload-artifact@v1
       with:
-        artifacts: "build/app/outputs/flutter-apk/app-release.apk"
-        token: ${{ secrets.GH_TOKEN }}
-        tag: "1.0.0"
-        commit: ${{ github.sha }}
-        prerelease: true
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: my-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
-        retention-days: 5
-   
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
